合并历史数据回溯和每天爬取代码

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -149,8 +149,8 @@ serverurl=unix:///Users/suohailong/supervisor/supervisor.sock ; use a unix:// UR
 ;files = relative/directory/*.ini
 
 [program:start_replay]
-command=/bin/bash start_replay_crawler.sh
-directory=/Users/suohailong/idatage/facebook_twitter_crawler/twitfaceCrawler/
+command=pipenv run python3 day_crawler_reactions.py
+directory=/Users/suohailong/idatage/facebook_twitter_crawler/twitfaceCrawler/day_script
 redirect_stderr=true
 stdout_logfile=./replay.log
 numprocs=1
@@ -158,16 +158,16 @@ startretries=3
 autorestart = true
 
 [program:start_twitter_tweet]
-command=/bin/bash start_twitter_tweet.sh
-directory=/Users/suohailong/idatage/facebook_twitter_crawler/twitfaceCrawler/
+command=pipenv run python3 day_crawler_posts.py
+directory=/Users/suohailong/idatage/facebook_twitter_crawler/twitfaceCrawler/day_script
 redirect_stderr=true
 stdout_logfile=./twitter_tweet.log
 startretries=3
 autorestart = true
 
 [program:start_reactions]
-command=/bin/bash start_reactions.sh
-directory=/Users/suohailong/idatage/facebook_twitter_crawler/twitfaceCrawler/
+command=pipenv run python3 day_crawler_replay.py
+directory=/Users/suohailong/idatage/facebook_twitter_crawler/twitfaceCrawler/day_script
 redirect_stderr=true
 stdout_logfile=./reactions.log
 numprocs=1
@@ -175,8 +175,8 @@ startretries=3
 autorestart = true
 
 [program:start_facebook_tweet]
-command=/bin/bash start_facebook_tweet.sh
-directory=/Users/suohailong/idatage/facebook_twitter_crawler/twitfaceCrawler/
+command=pipenv run python3 day_crawler_tweets.py
+directory=/Users/suohailong/idatage/facebook_twitter_crawler/twitfaceCrawler/day_script
 redirect_stderr=true
 stdout_logfile=./facebook_tweet.log
 startretries=3
