新增通过配置改变文章搜索范围

--- a/config.json
+++ b/config.json
@@ -14,5 +14,6 @@
           "collection":"Tuser_post"
 
 	},
-	"run_platform":"localhost"
+	"run_platform":"localhost",
+	"deadtime":"2016-12-31"
 }
