修改supervisord配置文件

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -13,8 +13,8 @@
 ;    "command=bash -c 'foo ; bar'" will truncate to "command=bash -c 'foo ".
 
 [unix_http_server]
-;file=/tmp/supervisor.sock   ; the path to the socket file
-file=/Users/suohailong/supervisor.sock
+file=/tmp/supervisor.sock   ; the path to the socket file
+;file=/Users/suohailong/supervisor.sock
 ;chmod=0700                 ; socket file mode (default 0700)
 ;chown=nobody:nogroup       ; socket file uid:gid owner
 ;username=user              ; default is no username (open server)
@@ -30,7 +30,7 @@ logfile=/var/log/supervisor/supervisord.log ; main log file; default $CWD/superv
 logfile_maxbytes=50MB        ; max main logfile bytes b4 rotation; default 50MB
 logfile_backups=10           ; # of main logfile backups; 0 means none, default 10
 loglevel=info                ; log level; default info; others: debug,warn,trace
-pidfile=/Users/suohailong/supervisor/supervisord.pid ; supervisord pidfile; default supervisord.pid
+pidfile=/tmp/supervisord.pid ; supervisord pidfile; default supervisord.pid
 nodaemon=false               ; start in foreground if true; default false
 minfds=1024                  ; min. avail startup file descriptors; default 1024
 minprocs=200                 ; min. avail process descriptors;default 200
@@ -55,7 +55,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 ; or inet_http_server section.
 
 [supervisorctl]
-serverurl=unix:///Users/suohailong/supervisor/supervisor.sock ; use a unix:// URL  for a unix socket
+serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;serverurl=http://127.0.0.1:9001 ; use an http:// url to specify an inet socket
 ;username=chris              ; should be same as in [*_http_server] if set
 ;password=123                ; should be same as in [*_http_server] if set
@@ -150,37 +150,45 @@ serverurl=unix:///Users/suohailong/supervisor/supervisor.sock ; use a unix:// UR
 
 [program:start_replay]
 command=pipenv run python3 day_crawler_reactions.py
-directory=/Users/suohailong/idatage/facebook_twitter_crawler/twitfaceCrawler/day_script
+directory=/root/twitter_facebook_crawler/day_script
 redirect_stderr=true
 stdout_logfile=./replay.log
 numprocs=1
 startretries=3
 autorestart = true
+stdout_logfile_maxbytes=1MB
+stderr_logfile_maxbytes=1MB
 
 [program:start_twitter_tweet]
 command=pipenv run python3 day_crawler_posts.py
-directory=/Users/suohailong/idatage/facebook_twitter_crawler/twitfaceCrawler/day_script
+directory=/root/twitter_facebook_crawler/day_script
 redirect_stderr=true
 stdout_logfile=./twitter_tweet.log
 startretries=3
 autorestart = true
+stdout_logfile_maxbytes=1MB
+stderr_logfile_maxbytes=1MB
 
 [program:start_reactions]
 command=pipenv run python3 day_crawler_replay.py
-directory=/Users/suohailong/idatage/facebook_twitter_crawler/twitfaceCrawler/day_script
+directory=/root/twitter_facebook_crawler/day_script
 redirect_stderr=true
 stdout_logfile=./reactions.log
 numprocs=1
 startretries=3
 autorestart = true
+stdout_logfile_maxbytes=1MB
+stderr_logfile_maxbytes=1MB
 
 [program:start_facebook_tweet]
 command=pipenv run python3 day_crawler_tweets.py
-directory=/Users/suohailong/idatage/facebook_twitter_crawler/twitfaceCrawler/day_script
+directory=/root/twitter_facebook_crawler/day_script
 redirect_stderr=true
 stdout_logfile=./facebook_tweet.log
 startretries=3
 autorestart = true
+stdout_logfile_maxbytes=1MB
+stderr_logfile_maxbytes=1MB
 
 
 
