修改supervisord配置文件

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -56,7 +56,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
-;serverurl=http://127.0.0.1:9001 ; use an http:// url to specify an inet socket
+;serverurl=http://47.75.17.27:9001 ; use an http:// url to specify an inet socket
 ;username=chris              ; should be same as in [*_http_server] if set
 ;password=123                ; should be same as in [*_http_server] if set
 ;prompt=mysupervisor         ; cmd line prompt (default "supervisor")
@@ -149,8 +149,8 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;files = relative/directory/*.ini
 
 [program:start_replay]
-command=pipenv run python3 day_crawler_reactions.py
-directory=/root/twitter_facebook_crawler/day_script
+command=pipenv run python3 day_script/day_crawler_reactions.py
+directory=/root/twitter_facebook_crawler/
 redirect_stderr=true
 stdout_logfile=./replay.log
 numprocs=1
@@ -160,8 +160,8 @@ stdout_logfile_maxbytes=1MB
 stderr_logfile_maxbytes=1MB
 
 [program:start_twitter_tweet]
-command=pipenv run python3 day_crawler_posts.py
-directory=/root/twitter_facebook_crawler/day_script
+command=pipenv run python3 day_script/day_crawler_posts.py
+directory=/root/twitter_facebook_crawler/
 redirect_stderr=true
 stdout_logfile=./twitter_tweet.log
 startretries=3
@@ -170,8 +170,8 @@ stdout_logfile_maxbytes=1MB
 stderr_logfile_maxbytes=1MB
 
 [program:start_reactions]
-command=pipenv run python3 day_crawler_replay.py
-directory=/root/twitter_facebook_crawler/day_script
+command=pipenv run python3 day_script/day_crawler_replay.py
+directory=/root/twitter_facebook_crawler/
 redirect_stderr=true
 stdout_logfile=./reactions.log
 numprocs=1
@@ -181,8 +181,8 @@ stdout_logfile_maxbytes=1MB
 stderr_logfile_maxbytes=1MB
 
 [program:start_facebook_tweet]
-command=pipenv run python3 day_crawler_tweets.py
-directory=/root/twitter_facebook_crawler/day_script
+command=pipenv run python3 day_script/day_crawler_tweets.py
+directory=/root/twitter_facebook_crawler/
 redirect_stderr=true
 stdout_logfile=./facebook_tweet.log
 startretries=3
