--- a/supervisord.conf
+++ b/supervisord.conf
@@ -169,26 +169,26 @@ autorestart = true
 stdout_logfile_maxbytes=1MB
 stderr_logfile_maxbytes=1MB
 
-[program:start_reactions]
-command=pipenv run python3 day_script/day_crawler_replay.py
-directory=/root/twitter_facebook_crawler/
-redirect_stderr=true
-stdout_logfile=./reactions.log
-numprocs=1
-startretries=3
-autorestart = true
-stdout_logfile_maxbytes=1MB
-stderr_logfile_maxbytes=1MB
+;[program:start_reactions]
+;command=pipenv run python3 day_script/day_crawler_replay.py
+;directory=/root/twitter_facebook_crawler/
+;redirect_stderr=true
+;stdout_logfile=./reactions.log
+;numprocs=1
+;startretries=3
+;autorestart = true
+;stdout_logfile_maxbytes=1MB
+;stderr_logfile_maxbytes=1MB
 
-[program:start_facebook_tweet]
-command=pipenv run python3 day_script/day_crawler_tweets.py
-directory=/root/twitter_facebook_crawler/
-redirect_stderr=true
-stdout_logfile=./facebook_tweet.log
-startretries=3
-autorestart = true
-stdout_logfile_maxbytes=1MB
-stderr_logfile_maxbytes=1MB
+;[program:start_facebook_tweet]
+;command=pipenv run python3 day_script/day_crawler_tweets.py
+;directory=/root/twitter_facebook_crawler/
+;redirect_stderr=true
+;stdout_logfile=./facebook_tweet.log
+;startretries=3
+;autorestart = true
+;stdout_logfile_maxbytes=1MB
+;stderr_logfile_maxbytes=1MB
 
 
 
