--- a/supervisord.conf
+++ b/supervisord.conf
@@ -148,29 +148,8 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;[include]
 ;files = relative/directory/*.ini
 
-[program:start_replay]
-command=pipenv run python3 day_script/day_crawler_reactions.py
-directory=/root/twitter_facebook_crawler/
-redirect_stderr=true
-stdout_logfile=./replay.log
-numprocs=1
-startretries=3
-autorestart = true
-stdout_logfile_maxbytes=1MB
-stderr_logfile_maxbytes=1MB
-
-[program:start_twitter_tweet]
-command=pipenv run python3 day_script/day_crawler_posts.py
-directory=/root/twitter_facebook_crawler/
-redirect_stderr=true
-stdout_logfile=./twitter_tweet.log
-startretries=3
-autorestart = true
-stdout_logfile_maxbytes=1MB
-stderr_logfile_maxbytes=1MB
-
 ;[program:start_reactions]
-;command=pipenv run python3 day_script/day_crawler_replay.py
+;command=pipenv run python3 day_script/day_crawler_reactions.py
 ;directory=/root/twitter_facebook_crawler/
 ;redirect_stderr=true
 ;stdout_logfile=./reactions.log
@@ -181,14 +160,34 @@ stderr_logfile_maxbytes=1MB
 ;stderr_logfile_maxbytes=1MB
 
 ;[program:start_facebook_tweet]
-;command=pipenv run python3 day_script/day_crawler_tweets.py
+;command=pipenv run python3 day_script/day_crawler_posts.py
 ;directory=/root/twitter_facebook_crawler/
 ;redirect_stderr=true
-;stdout_logfile=./facebook_tweet.log
+;stdout_logfile=./start_facebook_tweet.log
 ;startretries=3
 ;autorestart = true
 ;stdout_logfile_maxbytes=1MB
 ;stderr_logfile_maxbytes=1MB
 
+[program:start_replay]
+command=pipenv run python3 day_script/day_crawler_replay.py
+directory=/root/twitter_facebook_crawler/
+redirect_stderr=true
+stdout_logfile=./replay.log
+numprocs=1
+startretries=3
+autorestart = true
+stdout_logfile_maxbytes=1MB
+stderr_logfile_maxbytes=1MB
+
+[program:start_twitter_tweet]
+command=pipenv run python3 day_script/day_crawler_tweets.py
+directory=/root/twitter_facebook_crawler/
+redirect_stderr=true
+stdout_logfile=./twitter_tweet.log
+startretries=3
+autorestart = true
+stdout_logfile_maxbytes=1MB
+stderr_logfile_maxbytes=1MB
 
 
