--- a/supervisord.conf
+++ b/supervisord.conf
@@ -148,26 +148,26 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;[include]
 ;files = relative/directory/*.ini
 
-;[program:start_reactions]
-;command=pipenv run python3 day_script/day_crawler_reactions.py
-;directory=/root/twitter_facebook_crawler/
-;redirect_stderr=true
-;stdout_logfile=./reactions.log
-;numprocs=1
-;startretries=3
-;autorestart = true
-;stdout_logfile_maxbytes=1MB
-;stderr_logfile_maxbytes=1MB
+[program:start_reactions]
+command=pipenv run python3 day_script/day_crawler_reactions.py
+directory=/root/twitter_facebook_crawler/
+redirect_stderr=true
+stdout_logfile=./reactions.log
+numprocs=1
+startretries=3
+autorestart = true
+stdout_logfile_maxbytes=1MB
+stderr_logfile_maxbytes=1MB
 
-;[program:start_facebook_tweet]
-;command=pipenv run python3 day_script/day_crawler_posts.py
-;directory=/root/twitter_facebook_crawler/
-;redirect_stderr=true
-;stdout_logfile=./start_facebook_tweet.log
-;startretries=3
-;autorestart = true
-;stdout_logfile_maxbytes=1MB
-;stderr_logfile_maxbytes=1MB
+[program:start_facebook_tweet]
+command=pipenv run python3 day_script/day_crawler_posts.py
+directory=/root/twitter_facebook_crawler/
+redirect_stderr=true
+stdout_logfile=./start_facebook_tweet.log
+startretries=3
+autorestart = true
+stdout_logfile_maxbytes=1MB
+stderr_logfile_maxbytes=1MB
 
 [program:start_replay]
 command=pipenv run python3 day_script/day_crawler_replay.py
