调整reaction和replay的抓取函数

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -152,7 +152,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 command=pipenv run python3 day_script/day_crawler_reactions.py
 directory=/root/twitter_facebook_crawler/
 redirect_stderr=true
-stdout_logfile=./reactions.log
+stdout_logfile=./log/reactions.log
 numprocs=1
 startretries=3
 autorestart = true
@@ -163,7 +163,7 @@ stderr_logfile_maxbytes=1MB
 command=pipenv run python3 day_script/day_crawler_posts.py
 directory=/root/twitter_facebook_crawler/
 redirect_stderr=true
-stdout_logfile=./start_facebook_tweet.log
+stdout_logfile=./log/start_facebook_tweet.log
 startretries=3
 autorestart = true
 stdout_logfile_maxbytes=1MB
@@ -173,7 +173,7 @@ stderr_logfile_maxbytes=1MB
 command=pipenv run python3 day_script/day_crawler_replay.py
 directory=/root/twitter_facebook_crawler/
 redirect_stderr=true
-stdout_logfile=./replay.log
+stdout_logfile=./log/replay.log
 numprocs=1
 startretries=3
 autorestart = true
@@ -184,7 +184,7 @@ stderr_logfile_maxbytes=1MB
 command=pipenv run python3 day_script/day_crawler_tweets.py
 directory=/root/twitter_facebook_crawler/
 redirect_stderr=true
-stdout_logfile=./twitter_tweet.log
+stdout_logfile=./log/twitter_tweet.log
 startretries=3
 autorestart = true
 stdout_logfile_maxbytes=1MB
