--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
 	"redis_config2": {
 		"port": 6007,
       	"host": "101.201.227.186",
+		"family": 4,
 		"db":0,
       	"password": "Abc123098"
 	},
